yaml/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zz-frame
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nuxt.example.internal
      secretName: zz-frame-tls
  rules:
    - host: nuxt.example.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zz-frame-nodeport
                port:
                  number: 80
